Added container port panel